[gd_scene load_steps=43 format=2]

[ext_resource path="res://Root.gd" type="Script" id=1]
[ext_resource path="res://images/grasstile.png" type="Texture" id=2]
[ext_resource path="res://Score.gd" type="Script" id=3]
[ext_resource path="res://images/verticalroad.png" type="Texture" id=4]
[ext_resource path="res://images/horizontalroad.png" type="Texture" id=5]
[ext_resource path="res://images/tsection3.png" type="Texture" id=6]
[ext_resource path="res://images/tsection4.png" type="Texture" id=7]
[ext_resource path="res://images/intersection.png" type="Texture" id=8]
[ext_resource path="res://images/45edit.png" type="Texture" id=9]
[ext_resource path="res://images/factory (2).png" type="Texture" id=10]
[ext_resource path="res://images/store.png" type="Texture" id=11]
[ext_resource path="res://images/Apartments32.png" type="Texture" id=12]
[ext_resource path="res://images/farmhouse.png" type="Texture" id=13]
[ext_resource path="res://images/farmland.png" type="Texture" id=14]
[ext_resource path="res://images/rd_turnroad.png" type="Texture" id=15]
[ext_resource path="res://images/dl_turnroad.png" type="Texture" id=16]
[ext_resource path="res://images/lu_turnroad.png" type="Texture" id=17]
[ext_resource path="res://images/ur_turnroad.png" type="Texture" id=18]
[ext_resource path="res://images/houses.png" type="Texture" id=19]
[ext_resource path="res://images/yellowhouses.png" type="Texture" id=20]
[ext_resource path="res://images/tsection1.png" type="Texture" id=21]
[ext_resource path="res://images/tsection2.png" type="Texture" id=22]
[ext_resource path="res://propertiles.gd" type="Script" id=23]
[ext_resource path="res://HeroLight-Regular.ttf" type="DynamicFontData" id=24]
[ext_resource path="res://Info_Box.gd" type="Script" id=25]
[ext_resource path="res://images/happiness.png" type="Texture" id=26]
[ext_resource path="res://EndTurnButton.gd" type="Script" id=27]
[ext_resource path="res://NewsButton.gd" type="Script" id=28]
[ext_resource path="res://CheckBox.gd" type="Script" id=29]
[ext_resource path="res://FortifyBuilding.gd" type="Script" id=30]
[ext_resource path="res://StripResources.gd" type="Script" id=31]
[ext_resource path="res://ResButton.gd" type="Script" id=32]
[ext_resource path="res://peopleButton.gd" type="Script" id=33]
[ext_resource path="res://SpinBox.gd" type="Script" id=34]
[ext_resource path="res://Reset Button.gd" type="Script" id=35]

[sub_resource type="TileSet" id=1]
0/name = "grass"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 0, 0 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = ""
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 0, 0 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "vertroad"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 0, 0 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "horizroad"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 0, 0 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "turn1"
2/texture = ExtResource( 15 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 0, 0 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "turn2"
3/texture = ExtResource( 16 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 0, 0 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "turn3"
4/texture = ExtResource( 17 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 0, 0 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0
5/name = "turn4"
5/texture = ExtResource( 18 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 0, 0 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [  ]
5/z_index = 0
6/name = "houses1"
6/texture = ExtResource( 19 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 0, 0 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shapes = [  ]
6/z_index = 0
7/name = "houses2"
7/texture = ExtResource( 20 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 0, 0 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shapes = [  ]
7/z_index = 0
8/name = "T1"
8/texture = ExtResource( 21 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 0, 0 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shapes = [  ]
8/z_index = 0
9/name = "T2"
9/texture = ExtResource( 22 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 0, 0 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shapes = [  ]
9/z_index = 0
10/name = "T3"
10/texture = ExtResource( 6 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 0, 0, 0 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shapes = [  ]
10/z_index = 0
11/name = "T4"
11/texture = ExtResource( 7 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 0, 0, 0, 0 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shapes = [  ]
11/z_index = 0
12/name = "Intersection"
12/texture = ExtResource( 8 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 0, 0, 0, 0 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shapes = [  ]
12/z_index = 0
13/name = "oops"
13/texture = ExtResource( 9 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 0, 0, 0, 0 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shapes = [  ]
13/z_index = 0
14/name = "Factory"
14/texture = ExtResource( 10 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 0, 0, 0, 0 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shapes = [  ]
14/z_index = 0
15/name = "Store"
15/texture = ExtResource( 11 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 0, 0, 0, 0 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shapes = [  ]
15/z_index = 0
16/name = "apartments"
16/texture = ExtResource( 12 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 0, 0, 0, 0 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shapes = [  ]
16/z_index = 0
17/name = "farmhouse.png 17"
17/texture = ExtResource( 13 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 0, 0, 32, 32 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shapes = [  ]
17/z_index = 0
18/name = "farmland.png 18"
18/texture = ExtResource( 14 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 0, 0, 32, 32 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shapes = [  ]
18/z_index = 0

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 24 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.388235, 0.447059, 0.541176, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.194805, 0.506494, 0.792208, 1 )
colors = PoolColorArray( 0.890196, 0.12549, 0.12549, 1, 0.901659, 0.480845, 0.079638, 1, 0.913725, 0.854902, 0.0313726, 1, 0.630547, 0.83612, 0.0515996, 1, 0.145098, 0.803922, 0.0862745, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )
width = 100

[node name="Root" type="Node"]
script = ExtResource( 1 )

[node name="Grassbackdrop" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 1, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0 )
script = ExtResource( 3 )

[node name="propertiles" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 13, 0, 6, 6, 0, 7, 6, 0, 8, 6, 0, 13, 18, 0, 14, 18, 0, 15, 18, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 3, 0, 65548, 2, 0, 65549, 17, 0, 65550, 18, 0, 65551, 18, 0, 131078, 6, 0, 131079, 6, 0, 131080, 6, 0, 131081, 0, 0, 131084, 0, 0, 131085, 18, 0, 131086, 18, 0, 131087, 18, 0, 131091, 14, 0, 196610, 16, 0, 196611, 16, 0, 196615, 16, 0, 196616, 16, 0, 196617, 0, 0, 196620, 0, 0, 262145, 16, 0, 262146, 2, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 3, 0, 262153, 0, 0, 262155, 15, 0, 262156, 0, 0, 327681, 15, 0, 327682, 0, 0, 327688, 11, 0, 327689, 9, 0, 327690, 1, 0, 327691, 1, 0, 327692, 10, 0, 393217, 16, 0, 393218, 0, 0, 393224, 0, 0, 393226, 15, 0, 393227, 15, 0, 393228, 0, 0, 458753, 2, 0, 458754, 9, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 4, 0, 458764, 0, 0, 458765, 14, 0, 524289, 0, 0, 524291, 16, 0, 524292, 15, 0, 524293, 15, 0, 524294, 16, 0, 524295, 16, 0, 524300, 0, 0, 589825, 0, 0, 589834, 14, 0, 589836, 0, 0, 589839, 15, 0, 655361, 0, 0, 655362, 6, 0, 655363, 6, 0, 655364, 6, 0, 655365, 6, 0, 655366, 6, 0, 655367, 6, 0, 655372, 11, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 720896, 6, 0, 720897, 11, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 3, 0, 720904, 6, 0, 720908, 0, 0, 720909, 14, 0, 786432, 6, 0, 786433, 0, 0, 786439, 0, 0, 786440, 6, 0, 786442, 14, 0, 786444, 0, 0, 851968, 6, 0, 851969, 5, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 4, 0, 851976, 6, 0, 851980, 0, 0, 917505, 6, 0, 917506, 6, 0, 917507, 6, 0, 917508, 6, 0, 917509, 6, 0, 917510, 6, 0, 917511, 6, 0, 917516, 0, 0, 983052, 0, 0, 1114123, 1, 0, 1114125, 1, 0, 1114129, 1, 0 )
script = ExtResource( 23 )

[node name="BottomDialog" type="ColorRect" parent="."]
editor/display_folded = true
margin_top = 512.0
margin_right = 512.0
margin_bottom = 600.0
color = Color( 0.0447989, 0.0320435, 0.195313, 1 )

[node name="InfoBox" type="RichTextLabel" parent="BottomDialog"]
anchor_right = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -254.0
margin_bottom = 87.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
scroll_active = false
script = ExtResource( 25 )

[node name="InfoBox2" type="RichTextLabel" parent="BottomDialog"]
anchor_right = 1.0
margin_left = 250.0
margin_top = 4.0
margin_right = -3.0
margin_bottom = 87.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
scroll_active = false
script = ExtResource( 25 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 512.0
margin_right = 690.0
margin_bottom = 600.0
color = Color( 0.0431373, 0.0313726, 0.196078, 1 )

[node name="TurnCounterBox" type="ColorRect" parent="."]
editor/display_folded = true
margin_left = 525.056
margin_top = 464.0
margin_right = 677.0
margin_bottom = 486.762
color = Color( 0.243137, 0.231373, 0.27451, 1 )

[node name="Text" type="RichTextLabel" parent="TurnCounterBox"]
margin_left = 5.0
margin_top = 6.0
margin_right = 166.0
margin_bottom = 32.0
meta_underlined = false

[node name="TurnActions" type="ColorRect" parent="."]
editor/display_folded = true
margin_left = 525.0
margin_top = 496.0
margin_right = 677.0
margin_bottom = 590.0
color = Color( 0.243137, 0.231373, 0.27451, 1 )

[node name="Text" type="RichTextLabel" parent="TurnActions"]
margin_left = 15.0
margin_top = 6.0
margin_right = 149.0
margin_bottom = 32.0
meta_underlined = false
text = "Remaining Actions"

[node name="Res" type="RichTextLabel" parent="TurnActions"]
margin_left = 17.0
margin_top = 26.8401
margin_right = 103.0
margin_bottom = 90.8401
text = "Resource
Shipments

People"

[node name="resValue" type="RichTextLabel" parent="TurnActions"]
margin_left = 103.0
margin_top = 36.0
margin_right = 149.0
margin_bottom = 60.0
text = "10"

[node name="popValue" type="RichTextLabel" parent="TurnActions"]
margin_left = 103.0
margin_top = 74.0
margin_right = 149.0
margin_bottom = 98.0
text = "100"

[node name="HappinessMeter" type="ColorRect" parent="."]
editor/display_folded = true
margin_left = 525.0
margin_top = 420.196
margin_right = 677.0
margin_bottom = 454.0
color = Color( 0.243137, 0.231373, 0.27451, 1 )

[node name="ProgressBar" type="TextureProgress" parent="HappinessMeter"]
margin_left = 40.0
margin_top = 3.0
margin_right = 149.0
margin_bottom = 31.0
value = 100.0
texture_under = SubResource( 5 )
texture_progress = SubResource( 7 )
nine_patch_stretch = true

[node name="Face" type="TextureRect" parent="HappinessMeter"]
margin_left = 2.09503
margin_top = 0.698334
margin_right = 35.095
margin_bottom = 34.6983
texture = ExtResource( 26 )

[node name="EndTurnButton" type="Button" parent="."]
margin_left = 525.0
margin_top = 19.0
margin_right = 677.0
margin_bottom = 71.0
text = "End Turn"
script = ExtResource( 27 )

[node name="NewsButton" type="Button" parent="."]
editor/display_folded = true
margin_left = 525.0
margin_top = 358.0
margin_right = 677.0
margin_bottom = 410.0
text = "News Censorship"
script = ExtResource( 28 )

[node name="NewsHint" type="ColorRect" parent="NewsButton"]
editor/display_folded = true
visible = false
margin_left = -168.0
margin_top = -2.0
margin_right = -16.0
margin_bottom = 52.0
color = Color( 0.152941, 0.152941, 0.176471, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="NewsButton/NewsHint"]
margin_left = 1.58667
margin_top = 4.4133
margin_right = 154.587
margin_bottom = 68.4133
text = "Control how much your citizens know about the crisis"

[node name="CheckList" type="Button" parent="NewsButton"]
editor/display_folded = true
visible = false
margin_top = 52.0
margin_right = 152.0
margin_bottom = 158.0
disabled = true

[node name="0" type="CheckBox" parent="NewsButton/CheckList"]
margin_left = 8.0
margin_top = 15.0
margin_right = 136.0
margin_bottom = 45.0
text = "Media Blackout"
script = ExtResource( 29 )

[node name="1" type="CheckBox" parent="NewsButton/CheckList"]
margin_left = 8.0
margin_top = 37.0
margin_right = 136.0
margin_bottom = 67.0
text = "Limited Info"
script = ExtResource( 29 )

[node name="2" type="CheckBox" parent="NewsButton/CheckList"]
margin_left = 8.0
margin_top = 58.0
margin_right = 136.0
margin_bottom = 88.0
text = "Full Disclosure"
script = ExtResource( 29 )

[node name="FortifyBuilding" type="Button" parent="."]
editor/display_folded = true
margin_left = 525.0
margin_top = 235.0
margin_right = 677.0
margin_bottom = 287.0
text = "Fortify Buildings"
script = ExtResource( 30 )

[node name="PopupDialog2" type="PopupDialog" parent="FortifyBuilding"]
margin_left = -166.0
margin_top = -2.0
margin_right = -13.0
margin_bottom = 52.0

[node name="RichTextLabel" type="RichTextLabel" parent="FortifyBuilding/PopupDialog2"]
margin_left = 7.0
margin_top = 10.0
margin_right = 196.0
margin_bottom = 71.0
text = "Increase a building's structural integrity."

[node name="StripResources" type="Button" parent="."]
editor/display_folded = true
margin_left = 525.0
margin_top = 296.0
margin_right = 677.0
margin_bottom = 348.0
text = "Strip Resources"
script = ExtResource( 31 )

[node name="PopupDialog3" type="PopupDialog" parent="StripResources"]
margin_left = -196.0
margin_top = -5.0
margin_right = -11.0
margin_bottom = 58.0

[node name="RichTextLabel" type="RichTextLabel" parent="StripResources/PopupDialog3"]
margin_left = 7.0
margin_top = 10.0
margin_right = 196.0
margin_bottom = 71.0
text = "Compromise a building's structural integrity to gain resources"

[node name="ResButton" type="Button" parent="."]
editor/display_folded = true
margin_left = 525.0
margin_top = 81.0
margin_right = 677.0
margin_bottom = 149.0
text = "Move Resources"
script = ExtResource( 32 )

[node name="PopupDialog" type="PopupDialog" parent="ResButton"]
margin_left = -198.0
margin_top = -4.0
margin_right = -13.0
margin_bottom = 75.0

[node name="RichTextLabel" type="RichTextLabel" parent="ResButton/PopupDialog"]
margin_left = 7.0
margin_top = 10.0
margin_right = 196.0
margin_bottom = 71.0
text = "Once you have a building selected, press this button to choose a destination to move resources"

[node name="peopleButton" type="Button" parent="."]
editor/display_folded = true
margin_left = 525.0
margin_top = 157.0
margin_right = 677.0
margin_bottom = 225.0
text = "Move People"
script = ExtResource( 33 )

[node name="PopupDialog2" type="PopupDialog" parent="peopleButton"]
margin_left = -198.0
margin_top = -4.0
margin_right = -13.0
margin_bottom = 75.0

[node name="RichTextLabel" type="RichTextLabel" parent="peopleButton/PopupDialog2"]
margin_left = 7.0
margin_top = 10.0
margin_right = 196.0
margin_bottom = 71.0
text = "Once you have a building selected, press this button to choose a destination to move people"

[node name="MoveResourcesValue" type="SpinBox" parent="."]
margin_left = 569.0
margin_top = 125.0
margin_right = 643.0
margin_bottom = 149.0
max_value = 1000.0
script = ExtResource( 34 )

[node name="MovePeopleValue" type="SpinBox" parent="."]
margin_left = 569.0
margin_top = 200.0
margin_right = 643.0
margin_bottom = 224.0
script = ExtResource( 34 )

[node name="NewGameButton" type="Button" parent="."]
margin_left = 415.0
margin_top = 474.0
margin_right = 507.0
margin_bottom = 510.0
text = "New Game"
script = ExtResource( 35 )

